JavaModularity- Google Guice final